syntax = "proto3";

import "src/main/proto/message_object.proto";

package echo;

message EchoRequest {
    message_object.MessageObject from_client = 1;
}

message EchoResponse {
    message_object.MessageObject from_server = 1;
}

message UpperCaseRequest {
    string original = 1;
}

message UpperCaseResponse {
    string upper_cased = 1;
}

service Echo {
    rpc Echo (EchoRequest) returns (EchoResponse);
    rpc UpperCase (UpperCaseRequest) returns (UpperCaseResponse);
}
